# CFIsimulation

./: CLAUDE.md  Makefile  README.md  circuit_full_ps.tex  config.yaml  main.py  pyproject.toml  requirements.txt  run_gamma_sweep.sh  xz_test_data.npy  xz_test_max_dm.npy
core/: circuit.py  layers.py  trainer.py
core/utils/: arguments.py  customparser.py  utils.py
results/ps_p1.0_seed42600_20260314_182808/: config.yaml  max_dm.npy  opt_log.csv  optimized_params.npy  result.json
results/ps_p1.25_seed27235_20260314_211632/: config.yaml  max_dm.npy  opt_log.csv  optimized_params.npy  result.json
results/ps_p1.5_seed22160_20260314_225809/: config.yaml  max_dm.npy  opt_log.csv  optimized_params.npy  result.json
xz_test/: xz_test_data.npy
