[project]
name = "cfisimulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=1.26.1",
    "autoray>=0.6.1,<0.7.0",
    "pennylane==0.36.0",
    "pyyaml>=6.0.1",
    "scikit-learn==1.3.2",
    "torch==2.5.1",
    "tqdm>=4.65.0",
]
